# corrupt-o11y-py

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: advanced-usage.md
src/corrupt_o11y/: __init__.py
src/corrupt_o11y/logging/: __init__.py  config.py  logger.py
src/corrupt_o11y/logging/processors/: exception.py
src/corrupt_o11y/metadata/: service_info.py
src/corrupt_o11y/metrics/: __init__.py  collector.py
src/corrupt_o11y/operational/: server.py
src/corrupt_o11y/tracing/: config.py  tracer.py
tests/: test_internal.py  test_logging_collector.py  test_logging_config.py  test_logging_processors.py  test_metadata.py  test_metrics.py  test_operational_server.py  test_tracing.py
